[tool.poetry]
name = "rocksdb-playground"
version = "0.1.0"
description = ""
authors = ["Tim Chan <tchan@grabango.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.21"
pandas = "^1.1.2"
loguru = "^0.5.3"
numpy = "^1.19.2"
tabulate = "^0.8.7"
pyarrow = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
